--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </main>
 
     <footer class="attribution">
-      Coded by <a href="https://www.linkedin.com/in/ghaziya-manna-putri-iwadani">jjiyyaaa</a> | Challenge by
+      Coded by <a href="https://www.linkedin.com/in/ghaziya-manna-putri-iwadani" target="_blank">jjiyyaaa</a> | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank">devChallenges.io</a>.
     </footer>
 
